[package]
name = "sqlfluffrs_parser"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.28"
hashbrown = "0.15.5"
sqlfluffrs_types = { path = "../sqlfluffrs_types" }
sqlfluffrs_dialects = { path = "../sqlfluffrs_dialects" }
uuid = { version = "1.18.1", features = ["v4"] }
serde_yaml_ng = "0.10.0"
regex = { version = "1.11.2", features = ["perf"] }
