[package]
name = "sqlfluffrs_parser"
version.workspace = true
edition = "2021"

[dependencies]
env_logger = "0.11.9"
log = "0.4.29"
hashbrown = "0.16.1"
smallvec = "1.15.1"
sqlfluffrs_types = { path = "../sqlfluffrs_types" }
sqlfluffrs_dialects = { path = "../sqlfluffrs_dialects" }
sqlfluffrs_lexer = { path = "../sqlfluffrs_lexer" }
sqlfluffrs_python = { path = "../sqlfluffrs_python", optional = true }
uuid = { version = "1.22.0", features = ["v4"] }
serde_yaml_ng = "0.10.0"
regex = { version = "1.12.3", features = ["perf"] }
pyo3 = { version = "0.28.2", optional = true, features = ["hashbrown", "extension-module", "uuid"] }

[features]
python = ["pyo3", "sqlfluffrs_python", "sqlfluffrs_lexer/python"]
verbose-debug = []
