[package]
name = "sqlfluffrs_python"
version.workspace = true
edition = "2021"

[dependencies]
# NOTE: Update the abi3 version as we deprecate old python versions.
# It should match the oldest currently supported python version.
# `extension-module` is feature-gated (on by default) so this crate can also be
# linked into an *embedding* binary (e.g. the `sqlfluffrs_cli` `sqlfluff-rs`
# tool), where libpython must be linked. Such consumers depend on this crate
# with `default-features = false`. The Python extension build keeps the default.
pyo3 = { version = "0.29.0", default-features = false, features = ["abi3-py310", "macros", "hashbrown", "uuid"] }
sqlfluffrs_types = { path = "../sqlfluffrs_types" }
hashbrown = "0.16.1"
uuid = { version = "1.22.0", features = ["v4"] }
once_cell = "1.21.4"
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"

[features]
default = ["extension-module"]
# Suppresses linking libpython (for building a Python extension module).
# Embedding binaries depend on this crate with `default-features = false`.
extension-module = ["pyo3/extension-module"]
