[package]
name = "sqlfluffrs_python"
version.workspace = true
edition = "2021"
rust-version.workspace = true

[dependencies]
pyo3.workspace = true
sqlfluffrs_types = { path = "../sqlfluffrs_types" }
hashbrown.workspace = true
uuid.workspace = true
once_cell.workspace = true
bincode.workspace = true
serde.workspace = true
log.workspace = true
