[package]
name = "sqlfluffrs_rules"
version.workspace = true
edition = "2021"
rust-version.workspace = true

# Rust-native lint rules. Detection runs over the parse arena's public read API
# (sqlfluffrs_parser::Arena); fixes are still applied Python-side for now. The
# rule logic is pure Rust; the optional `python` feature adds each rule's thin
# PyO3 binding, registered by the root crate.
[dependencies]
sqlfluffrs_parser = { path = "../sqlfluffrs_parser" }
pyo3 = { workspace = true, optional = true }

[features]
python = ["pyo3", "sqlfluffrs_parser/python"]
